button manage by user,.....

--- a/apartment-for-rent.html
+++ b/apartment-for-rent.html
@@ -121,7 +121,8 @@
             </li>
             <li><a href="contact.html">CONTACT</a></li>
            <li><a href="post-news.html"><button style="line-height: 30px; margin-top: -10px; width: 150px; margin-right: -15px;" type="button" class="btn btn-info ">Kênh rao tin</button></a></li>
-          </ul>                            
+           <li><a href="index-renter.html"><button style="line-height: 30px; margin-top: -10px; width: 150px; margin-right: -15px;" type="button" class="btn btn-info ">Quản lý nhà thuê</button></a></li>
+			</ul>                            
         </div><!--/.nav-collapse -->       
       </div>          
     </nav> 
@@ -176,7 +177,7 @@
               <ul class="aa-properties-nav">
                 <li>
                   <article class="aa-properties-item">
-                    <a class="aa-properties-item-img" href="details-asset.html">
+                    <a class="aa-properties-item-img" href="details-property.html">
                       <img alt="img" src="img/item/6.jpg">
                     </a>
                     <div class="aa-tag for-rent">
@@ -189,21 +190,21 @@
                         <span>1100 SQ FT</span>
                       </div>
                       <div class="aa-properties-about">
-                        <h3><a href="details-asset.html">Chung cư 1</a></h3>
+                        <h3><a href="details-property.html">Chung cư 1</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>                      
                       </div>
                       <div class="aa-properties-detial">
                         <span class="aa-price">
                           $35000
                         </span>
-                        <a class="aa-secondary-btn" href="details-asset.html">Xem Chi Tiết</a>
+                        <a class="aa-secondary-btn" href="details-property.html">Xem Chi Tiết</a>
                       </div>
                     </div>
                   </article>
                 </li>
                 <li>
                   <article class="aa-properties-item">
-                    <a class="aa-properties-item-img" href="details-asset.html">
+                    <a class="aa-properties-item-img" href="details-property.html">
                       <img alt="img" src="img/item/1.jpg">
                     </a>
                     <div class="aa-tag sold-out">
@@ -217,20 +218,20 @@
                         <span>1100 SQ FT</span>
                       </div>
                       <div class="aa-properties-about">
-                        <h3><a href="details-asset.html">Chung cư cao cấp 2 PN</a></h3>
+                        <h3><a href="details-property.html">Chung cư cao cấp 2 PN</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>                      
                       </div>
                       <div class="aa-properties-detial">
                         <span class="aa-price">
                           $35000
                         </span>
-                        <a class="aa-secondary-btn" href="details-asset.html">Xem Chi Tiết</a>
+                        <a class="aa-secondary-btn" href="details-property.html">Xem Chi Tiết</a>
                       </div>
                     </div>
                   </article>
                 </li>
                  <li>
-                  <article class="aa-properties-item">    <a class="aa-properties-item-img" href="details-asset.html">
+                  <article class="aa-properties-item">    <a class="aa-properties-item-img" href="details-property.html">
                       <img alt="img" src="img/item/2.jpg">
                     </a>
                     <div class="aa-tag sold-out">
@@ -244,20 +245,20 @@
                         <span>1100 SQ FT</span>
                       </div>
                       <div class="aa-properties-about">
-                        <h3><a href="details-asset.html">Chung cư 3</a></h3>
+                        <h3><a href="details-property.html">Chung cư 3</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>                      
                       </div>
                       <div class="aa-properties-detial">
                         <span class="aa-price">
                           $35000
                         </span>
-                        <a class="aa-secondary-btn" href="details-asset.html">Xem Chi Tiết</a>
+                        <a class="aa-secondary-btn" href="details-property.html">Xem Chi Tiết</a>
                       </div>
                     </div>
                   </article>
                 </li>
                 <li>
-                  <article class="aa-properties-item">    <a class="aa-properties-item-img" href="details-asset.html">
+                  <article class="aa-properties-item">    <a class="aa-properties-item-img" href="details-property.html">
                       <img alt="img" src="img/item/5.jpg">
                     </a>
                     <div class="aa-tag for-sale">
@@ -271,20 +272,20 @@
                         <span>1100 SQ FT</span>
                       </div>
                       <div class="aa-properties-about">
-                        <h3><a href="details-asset.html">Chung cư 4</a></h3>
+                        <h3><a href="details-property.html">Chung cư 4</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>                      
                       </div>
                       <div class="aa-properties-detial">
                         <span class="aa-price">
                           $35000
                         </span>
-                        <a class="aa-secondary-btn" href="details-asset.html">Xem Chi Tiết</a>
+                        <a class="aa-secondary-btn" href="details-property.html">Xem Chi Tiết</a>
                       </div>
                     </div>
                   </article>
                 </li>
                  <li>
-                  <article class="aa-properties-item">    <a class="aa-properties-item-img" href="details-asset.html">
+                  <article class="aa-properties-item">    <a class="aa-properties-item-img" href="details-property.html">
                       <img alt="img" src="img/item/3.jpg">
                     </a>
                     <div class="aa-tag for-rent">
@@ -297,20 +298,20 @@
                         <span>1100 SQ FT</span>
                       </div>
                       <div class="aa-properties-about">
-                        <h3><a href="details-asset.html">Chung cư 5</a></h3>
+                        <h3><a href="details-property.html">Chung cư 5</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>                      
                       </div>
                       <div class="aa-properties-detial">
                         <span class="aa-price">
                           $35000
                         </span>
-                        <a class="aa-secondary-btn" href="details-asset.html">Xem Chi Tiết</a>
+                        <a class="aa-secondary-btn" href="details-property.html">Xem Chi Tiết</a>
                       </div>
                     </div>
                   </article>
                 </li>
                  <li>
-                  <article class="aa-properties-item">    <a class="aa-properties-item-img" href="details-asset.html">
+                  <article class="aa-properties-item">    <a class="aa-properties-item-img" href="details-property.html">
                       <img alt="img" src="img/item/4.jpg">
                     </a>
                     <div class="aa-tag for-sale">
@@ -324,14 +325,14 @@
                         <span>1100 SQ FT</span>
                       </div>
                       <div class="aa-properties-about">
-                        <h3><a href="details-asset.html">Chung cư 6</a>&nbsp;</h3>
+                        <h3><a href="details-property.html">Chung cư 6</a>&nbsp;</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>                      
                       </div>
                       <div class="aa-properties-detial">
                         <span class="aa-price">
                           $35000
                         </span>
-                        <a class="aa-secondary-btn" href="details-asset.html">Xem Chi Tiết</a>
+                        <a class="aa-secondary-btn" href="details-property.html">Xem Chi Tiết</a>
                       </div>
                     </div>
                   </article>
