--- a/details-property.html
+++ b/details-property.html
@@ -121,7 +121,8 @@
             </li>
             <li><a href="contact.html">CONTACT</a></li>
            <li><a href="post-news.html"><button style="line-height: 30px; margin-top: -10px; width: 150px; margin-right: -15px;" type="button" class="btn btn-info ">Kênh rao tin</button></a></li>
-          </ul>                            
+           <li><a href="index-renter.html"><button style="line-height: 30px; margin-top: -10px; width: 150px; margin-right: -15px;" type="button" class="btn btn-info ">Quản lý nhà thuê</button></a></li>
+			</ul>                            
         </div><!--/.nav-collapse -->       
       </div>          
     </nav> 
