--- a/index-renter.html
+++ b/index-renter.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <title>Bất động sản cho thuê | Cyber Place</title>
+    <title>Cyber Place | Bất động sản thông minh</title>
     
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -39,8 +39,7 @@
     <![endif]-->
 
   </head>
-
-  <body class="aa-price-range">   
+  <body class="aa-price-range">  
   <!-- Pre Loader -->
   <div id="aa-preloader-area">
     <div class="pulse"></div>
@@ -48,7 +47,6 @@
   <!-- SCROLL TOP BUTTON -->
     <a class="scrollToTop" href="#"><i class="fa fa-angle-double-up"></i></a>
   <!-- END SCROLL TOP BUTTON -->
-
 
   <!-- Start header section -->
   <header id="aa-header">  
@@ -70,8 +68,8 @@
               </div>
               <div class="col-md-6 col-sm-6 col-xs-6">
                 <div class="aa-header-right">
-                  <a href="sign-up.html" class="aa-register">Đăng ký</a>
-                  <a href="log-in.html" class="aa-login">Đăng nhập</a>
+                  <a href="#" class="aa-register">Xin chào ABCD!</a>				  
+                  <a href="#" class="aa-login">Đăng Xuất</a>
                 </div>
               </div>
             </div>
@@ -81,6 +79,7 @@
     </div>
   </header>
   <!-- End header section -->
+
   <!-- Start menu section -->
   <section id="aa-menu-area">
     <nav class="navbar navbar-default main-navbar" role="navigation">  
@@ -97,62 +96,39 @@
           <!-- Text based logo -->
            <a class="navbar-brand aa-logo" href="index.html"> Cyber <span>Place</span></a>
            <!-- Image based logo -->
-           <!-- <a class="navbar-brand aa-logo-img" href="index.html"><img src="img/logo.png" alt="logo"></a> -->
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="top-menu" class="nav navbar-nav navbar-right aa-main-nav">
             <li class="active"><a href="index.html">Trang Chủ</a></li>
-             <li class="dropdown">
-<!--              <a href="bds-cho-thue.html" class="dropdown-toggle" data-toggle="dropdown">Bất động sản cho thuê <span class="caret"></span></a>-->
-			  <a href="for-rent.html" class="dropdown-toggle">Bất động sản cho thuê <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">                
-                <li><a href="apartment-for-rent.html">Chung cư cho thuê</a></li>                
-                <li><a href="apartment-for-rent.html">Nhà riêng cho thuê</a></li>                
-                <li><a href="apartment-for-rent.html">Văn phòng cho thuê</a></li>                                           
-              </ul>
-            </li>
-            <li><a href="gallery.html">GALLERY</a></li>                                         
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="blog-archive.html">BLOG <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">                
-                <li><a href="blog-archive.html">BLOG</a></li>
-                <li><a href="blog-single.html">BLOG DETAILS</a></li>                                            
-              </ul>
-            </li>
-            <li><a href="contact.html">CONTACT</a></li>
-           <li><a href="post-news.html"><button style="line-height: 30px; margin-top: -10px; width: 150px; margin-right: -15px;" type="button" class="btn btn-info ">Kênh rao tin</button></a></li>
-           <li><a href="index-renter.html"><button style="line-height: 30px; margin-top: -10px; width: 150px; margin-right: -15px;" type="button" class="btn btn-info ">Quản lý nhà thuê</button></a></li>
-			</ul>                            
+			<li>
+  				  <a class="notification" href="notifications.html"><span>Thông Báo <span class="glyphicon">&#xe123;</span></span><span class="badge">99</span> </a></li>
+          </ul>
         </div><!--/.nav-collapse -->       
       </div>          
     </nav> 
   </section>
   <!-- End menu section -->
-
+	  
   <!-- Start Proerty header  -->
 
   <section id="aa-property-header">
     <div class="container">
-      <div class="row">
+      <div class="row	">
         <div class="col-md-12">
           <div class="aa-property-header-inner">
-            <h2>Danh Sách Bất Động Sản</h2>
-            <ol class="breadcrumb">
-            <li><a href="#">Trang Chủ</a></li>            
-            <li class="active">Bất Động Sản Cho Thuê</li>
-          </ol>
+			  <h2>TRANG CHỦ</h2>
           </div>
         </div>
       </div>
     </div>
   </section> 
-  <!-- End Proerty header  -->
-	
+  <!-- End Proerty header  -->  
+	  
   <!-- Start Properties  -->
   <section id="aa-properties">
     <div class="container">
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-12">
           <div class="aa-properties-content">
             <!-- start properties content head -->
             <div class="aa-properties-content-head">              
@@ -163,7 +139,7 @@
                     <option value="1" selected="Default">Mặc định</option>
                     <option value="2">Tên</option>
                     <option value="3">Giá</option>
-                    <option value="4">Ngày đăng</option>
+                    <option value="4">Ngày thuê</option>
                   </select>
                 </form>
               </div>
@@ -180,8 +156,6 @@
                     <a class="aa-properties-item-img" href="details-property.html">
                       <img alt="img" src="img/item/6.jpg">
                     </a>
-                    <div class="aa-tag for-rent">
-                      Cho Thuê</div>
                     <div class="aa-properties-item-content">
                       <div class="aa-properties-info">
                         <span>5 Rooms</span>
@@ -190,14 +164,11 @@
                         <span>1100 SQ FT</span>
                       </div>
                       <div class="aa-properties-about">
-                        <h3><a href="details-property.html">Nhà riêng số 1</a></h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>                      
+                        <h3><a href="details-property.html">Chung cư 1</a></h3>
+                        <p style=" color: red">Còn 5 ngày đến hạn thanh toán! <a style="background: #FF0004" class="aa-secondary-btn" href="#">Thanh toán ngay!</a> </p>  
                       </div>
                       <div class="aa-properties-detial">
-                        <span class="aa-price">
-                          $35000
-                        </span>
-                        <a class="aa-properties-item-img" href="details-property.html">
+                        <a class="aa-secondary-btn" href="details-property.html">Xem Chi Tiết</a>
                       </div>
                     </div>
                   </article>
@@ -207,9 +178,6 @@
                     <a class="aa-properties-item-img" href="details-property.html">
                       <img alt="img" src="img/item/1.jpg">
                     </a>
-                    <div class="aa-tag sold-out">
-                      Hết Hàng
-                    </div>
                     <div class="aa-properties-item-content">
                       <div class="aa-properties-info">
                         <span>5 Rooms</span>
@@ -219,25 +187,19 @@
                       </div>
                       <div class="aa-properties-about">
                         <h3><a href="details-property.html">Chung cư cao cấp 2 PN</a></h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>                      
+                        <p>Còn 25 ngày đến hạn thanh toán!</p>                      
                       </div>
                       <div class="aa-properties-detial">
-                        <span class="aa-price">
-                          $35000
-                        </span>
                         <a class="aa-secondary-btn" href="details-property.html">Xem Chi Tiết</a>
                       </div>
                     </div>
                   </article>
                 </li>
-                 <li>
+					<li>
                   <article class="aa-properties-item">
                     <a class="aa-properties-item-img" href="details-property.html">
-                      <img alt="img" src="img/item/2.jpg">
+                      <img alt="img" src="img/item/6.jpg">
                     </a>
-                    <div class="aa-tag sold-out">
-                      Hết Hàng
-                    </div>
                     <div class="aa-properties-item-content">
                       <div class="aa-properties-info">
                         <span>5 Rooms</span>
@@ -246,13 +208,10 @@
                         <span>1100 SQ FT</span>
                       </div>
                       <div class="aa-properties-about">
-                        <h3><a href="details-property.html">Cho thuê văn phòng</a></h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>                      
+                        <h3><a href="details-property.html">Chung cư 1</a></h3>
+                        <p style=" color: red">Còn 5 ngày đến hạn thanh toán! <a style="background: #FF0004" class="aa-secondary-btn" href="#">Thanh toán ngay!</a> </p>  
                       </div>
                       <div class="aa-properties-detial">
-                        <span class="aa-price">
-                          $35000
-                        </span>
                         <a class="aa-secondary-btn" href="details-property.html">Xem Chi Tiết</a>
                       </div>
                     </div>
@@ -261,11 +220,8 @@
                 <li>
                   <article class="aa-properties-item">
                     <a class="aa-properties-item-img" href="details-property.html">
-                      <img alt="img" src="img/item/5.jpg">
+                      <img alt="img" src="img/item/1.jpg">
                     </a>
-                    <div class="aa-tag for-sale">
-                      Đang Bán
-                    </div>
                     <div class="aa-properties-item-content">
                       <div class="aa-properties-info">
                         <span>5 Rooms</span>
@@ -274,68 +230,10 @@
                         <span>1100 SQ FT</span>
                       </div>
                       <div class="aa-properties-about">
-                        <h3><a href="details-property.html">Cho thuê văn phòng</a></h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>                      
+                        <h3><a href="details-property.html">Chung cư cao cấp 2 PN</a></h3>
+                        <p>Còn 25 ngày đến hạn thanh toán!</p>                      
                       </div>
                       <div class="aa-properties-detial">
-                        <span class="aa-price">
-                          $35000
-                        </span>
-                        <a class="aa-secondary-btn" href="details-property.html">Xem Chi Tiết</a>
-                      </div>
-                    </div>
-                  </article>
-                </li>
-                 <li>
-                  <article class="aa-properties-item">
-                    <a class="aa-properties-item-img" href="details-property.html">
-                      <img alt="img" src="img/item/3.jpg">
-                    </a>
-                    <div class="aa-tag for-rent">
-                        Cho Thuê</div>
-                    <div class="aa-properties-item-content">
-                      <div class="aa-properties-info">
-                        <span>5 Rooms</span>
-                        <span>2 Beds</span>
-                        <span>3 Baths</span>
-                        <span>1100 SQ FT</span>
-                      </div>
-                      <div class="aa-properties-about">
-                        <h3><a href="details-property.html">Appartment Title</a></h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>                      
-                      </div>
-                      <div class="aa-properties-detial">
-                        <span class="aa-price">
-                          $35000
-                        </span>
-                        <a class="aa-secondary-btn" href="details-property.html">Xem Chi Tiết</a>
-                      </div>
-                    </div>
-                  </article>
-                </li>
-                 <li>
-                  <article class="aa-properties-item">
-                    <a class="aa-properties-item-img" href="details-property.html">
-                      <img alt="img" src="img/item/4.jpg">
-                    </a>
-                    <div class="aa-tag for-sale">
-                      Đang Bán
-                    </div>
-                    <div class="aa-properties-item-content">
-                      <div class="aa-properties-info">
-                        <span>5 Rooms</span>
-                        <span>2 Beds</span>
-                        <span>3 Baths</span>
-                        <span>1100 SQ FT</span>
-                      </div>
-                      <div class="aa-properties-about">
-                        <h3><a href="details-property.html">Appartment Title</a></h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>                      
-                      </div>
-                      <div class="aa-properties-detial">
-                        <span class="aa-price">
-                          $35000
-                        </span>
                         <a class="aa-secondary-btn" href="details-property.html">Xem Chi Tiết</a>
                       </div>
                     </div>
@@ -368,103 +266,12 @@
           </div>
         </div>
         <!-- Start properties sidebar -->
-        <div class="col-md-4">
-          <aside class="aa-properties-sidebar">
-            <!-- Start Single properties sidebar -->
-            <div class="aa-properties-single-sidebar">
-              <h3>Tìm Kiếm</h3>
-              <form action="">
-                <div class="aa-single-advance-search">
-                  <input type="text" placeholder="Khu vực muốn tìm">
-                </div>
-                <div class="aa-single-advance-search">
-                  <select id="" name="">
-                    <option value="0" selected>Loại nhà đất</option>
-                    <option value="1">Chung cư</option>
-                    <option value="2">Nhà riêng</option>
-                    <option value="3">Văn phòng</option>
-                  </select>
-                </div>
-                <div class="aa-single-advance-search">
-                  <select id="" name="">
-                    <option value="0" selected>Hà Nội</option>
-                    <option value="1">Thanh Xuân</option>
-                    <option value="2">Cầu Giấy</option>
-                    <option value="3">Hà Đông</option>
-                    <option value="4">Hoàn Kiếm</option>
-                  </select>
-                </div>
-                <div class="aa-single-advance-search">
-                  <select id="" name="">
-                    <option value="0" selected>Diện tích</option>
-                    <option value="1">	&#60;&#61; 30m²</option>
-                    <option value="2">30 - 50m²</option>
-                    <option value="3">50 - 80m²</option>
-                    <option value="4">80 - 100m²</option>
-                  </select>
-                </div>
-                <div class="aa-single-filter-search">
-                  <span>KHOẢNG GIÁ:</span>
-                  <span>Từ</span>
-                  <span id="skip-value-lower" class="example-val">30.00</span>
-                  <span>Đến</span>
-                  <span id="skip-value-upper" class="example-val">100.00</span>
-                  <div id="aa-sqrfeet-range" class="noUi-target noUi-ltr noUi-horizontal noUi-background">
-                  </div>                  
-                </div>
-                <div class="aa-single-advance-search">
-                  <input type="submit" value="Tìm Kiếm" class="aa-search-btn">
-                </div>
-              </form>
-            </div> 
-            <!-- Start Single properties sidebar -->
-            <div class="aa-properties-single-sidebar">
-              <h3>Populer Properties</h3>
-              <div class="media">
-                <div class="media-left">
-                  <a href="#">
-                    <img class="media-object" src="img/item/1.jpg" alt="img">
-                  </a>
-                </div>
-                <div class="media-body">
-                  <h4 class="media-heading"><a href="#">This is Title</a></h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>                
-                  <span>$65000</span>
-                </div>              
-              </div>
-              <div class="media">
-                <div class="media-left">
-                  <a href="#">
-                    <img class="media-object" src="img/item/1.jpg" alt="img">
-                  </a>
-                </div>
-                <div class="media-body">
-                  <h4 class="media-heading"><a href="#">This is Title</a></h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>                
-                  <span>$65000</span>
-                </div>              
-              </div>
-              <div class="media">
-                <div class="media-left">
-                  <a href="#">
-                    <img class="media-object" src="img/item/1.jpg" alt="img">
-                  </a>
-                </div>
-                <div class="media-body">
-                  <h4 class="media-heading"><a href="#">This is Title</a></h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>                
-                  <span>$65000</span>
-                </div>              
-              </div>
-            </div>
-          </aside>
-        </div>
       </div>
     </div>
   </section>
-  <!-- / Properties  -->
-	  
-	  
+  <!-- / Properties  -->   
+
+  
   <!-- Footer -->
   <footer id="aa-footer">
     <div class="container">
@@ -501,11 +308,9 @@
     </div>
   </footer>
   <!-- / Footer -->
-
- 
-  
-
-  <!-- jQuery library -->
+	 
+	  
+	    <!-- jQuery library -->
   <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
   <script src="js/jquery.min.js"></script>   
   <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -520,7 +325,5 @@
   <script type="text/javascript" src="js/jquery.fancybox.pack.js"></script>
   <!-- Custom js -->
   <script src="js/custom.js"></script> 
-	  
-	</body>
-  <!-- End header section -->
+</body>
 </html>
