--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
             </li>
             <li><a href="contact.html">CONTACT</a></li>
            <li><a href="post-news.html"><button style="line-height: 30px; margin-top: -10px; width: 150px; margin-right: -15px;" type="button" class="btn btn-info ">Kênh rao tin</button></a></li>
+		   <li><a href="index-renter.html"><button style="line-height: 30px; margin-top: -10px; width: 150px; margin-right: -15px;" type="button" class="btn btn-info ">Quản lý nhà thuê</button></a></li>
           </ul>
         </div><!--/.nav-collapse -->       
       </div>          
@@ -141,7 +142,7 @@
             <p class="aa-top-slider-location"><i class="fa fa-map-marker"></i>Nguyễn Trãi, Thanh Xuân, Hà Nội</p>
             <span class="aa-top-slider-off">30% SALE OFF</span>
             <p class="aa-top-slider-price">5.000.000VND/1 tháng</p>
-            <a href="details-asset.html" class="aa-top-slider-btn">Đọc thêm <span class="fa fa-angle-double-right"></span></a>
+            <a href="details-property.html" class="aa-top-slider-btn">Đọc thêm <span class="fa fa-angle-double-right"></span></a>
           </div>
           <!-- / Top slider content -->
         </div>
@@ -156,7 +157,7 @@
             <p class="aa-top-slider-location"><i class="fa fa-map-marker"></i>Cầu Giấy, Hà Nội</p>
             <span class="aa-top-slider-off">30% OFF</span>
             <p class="aa-top-slider-price">7.000.000VND/1 tháng</p>
-            <a href="details-asset.html" class="aa-top-slider-btn">Đọc thêm <span class="fa fa-angle-double-right"></span></a>
+            <a href="details-property.html" class="aa-top-slider-btn">Đọc thêm <span class="fa fa-angle-double-right"></span></a>
           </div>
           <!-- / Top slider content -->
         </div>
@@ -253,7 +254,7 @@
           <div class="row">
             <div class="col-md-4">
               <article class="aa-properties-item">
-                <a href="details-asset.html" class="aa-properties-item-img">
+                <a href="details-property.html" class="aa-properties-item-img">
                   <img src="img/item/1.jpg" alt="img">
                 </a>
                 <div class="aa-tag for-sale">
@@ -267,21 +268,21 @@
                     <span>100m²</span>
                   </div>
                   <div class="aa-properties-about">
-                    <h3><a href="details-asset.html">Phòng tại Chung Cư Cao Cấp</a></h3>
+                    <h3><a href="details-property.html">Phòng tại Chung Cư Cao Cấp</a></h3>
 					  <p>Căn hộ chung cư full đồ, thiết kế hiện đại đẹp mắt. <br><br><br></p>                      
                   </div>
                   <div class="aa-properties-detial">
                     <span class="aa-price">
                       3.200.000.000đ
                     </span>
-                    <a href="details-asset.html" class="aa-secondary-btn">Xem Chi Tiết</a>
+                    <a href="details-property.html" class="aa-secondary-btn">Xem Chi Tiết</a>
                   </div>
                 </div>
               </article>
             </div>
             <div class="col-md-4">
               <article class="aa-properties-item">
-                <a href="details-asset.html" class="aa-properties-item-img">
+                <a href="details-property.html" class="aa-properties-item-img">
                   <img src="img/item/2.jpg" alt="img">
                 </a>
                 <div class="aa-tag for-rent">
@@ -295,21 +296,21 @@
                     <span>100m²</span>
                   </div>
                   <div class="aa-properties-about">
-                    <h3><a href="details-asset.html">Appartment Title</a></h3>
+                    <h3><a href="details-property.html">Appartment Title</a></h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>                      
                   </div>
                   <div class="aa-properties-detial">
                     <span class="aa-price">
                       $11000
                     </span>
-                    <a href="details-asset.html" class="aa-secondary-btn">Xem Chi Tiết</a>
+                    <a href="details-property.html" class="aa-secondary-btn">Xem Chi Tiết</a>
                   </div>
                 </div>
               </article>
             </div>
             <div class="col-md-4">
               <article class="aa-properties-item">
-                <a href="details-asset.html" class="aa-properties-item-img">
+                <a href="details-property.html" class="aa-properties-item-img">
                   <img src="img/item/3.jpg" alt="img">
                 </a>
                 <div class="aa-tag sold-out">
@@ -323,21 +324,21 @@
                     <span>100m²</span>
                   </div>
                   <div class="aa-properties-about">
-                    <h3><a href="details-asset.html">Appartment Title</a></h3>
+                    <h3><a href="details-property.html">Appartment Title</a></h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>                      
                   </div>
                   <div class="aa-properties-detial">
                     <span class="aa-price">
                       $15000
                     </span>
-                    <a href="details-asset.html" class="aa-secondary-btn">Xem Chi Tiết</a>
+                    <a href="details-property.html" class="aa-secondary-btn">Xem Chi Tiết</a>
                   </div>
                 </div>
               </article>
             </div>
             <div class="col-md-4">
               <article class="aa-properties-item">
-                <a href="details-asset.html" class="aa-properties-item-img">
+                <a href="details-property.html" class="aa-properties-item-img">
                   <img src="img/item/4.jpg" alt="img">
                 </a>
                 <div class="aa-tag for-sale">
@@ -351,21 +352,21 @@
                     <span>100m²</span>
                   </div>
                   <div class="aa-properties-about">
-                    <h3><a href="details-asset.html">Appartment Title</a></h3>
+                    <h3><a href="details-property.html">Appartment Title</a></h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>                      
                   </div>
                   <div class="aa-properties-detial">
                     <span class="aa-price">
                       $35000
                     </span>
-                    <a href="details-asset.html" class="aa-secondary-btn">Xem Chi Tiết</a>
+                    <a href="details-property.html" class="aa-secondary-btn">Xem Chi Tiết</a>
                   </div>
                 </div>
               </article>
             </div>
             <div class="col-md-4">
               <article class="aa-properties-item">
-                <a href="details-asset.html" class="aa-properties-item-img">
+                <a href="details-property.html" class="aa-properties-item-img">
                   <img src="img/item/5.jpg" alt="img">
                 </a>                
                 <div class="aa-tag sold-out">
@@ -379,21 +380,21 @@
                     <span>100m²</span>
                   </div>
                   <div class="aa-properties-about">
-                    <h3><a href="details-asset.html">Appartment Title</a></h3>
+                    <h3><a href="details-property.html">Appartment Title</a></h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>                      
                   </div>
                   <div class="aa-properties-detial">
                     <span class="aa-price">
                       $11000
                     </span>
-                    <a href="details-asset.html" class="aa-secondary-btn">Xem Chi Tiết</a>
+                    <a href="details-property.html" class="aa-secondary-btn">Xem Chi Tiết</a>
                   </div>
                 </div>
               </article>
             </div>
             <div class="col-md-4">
               <article class="aa-properties-item">
-                <a href="details-asset.html" class="aa-properties-item-img">
+                <a href="details-property.html" class="aa-properties-item-img">
                   <img src="img/item/6.jpg" alt="img">
                 </a>
                 <div class="aa-tag for-rent">
@@ -407,14 +408,14 @@
                     <span>100m²</span>
                   </div>
                   <div class="aa-properties-about">
-                    <h3><a href="details-asset.html">Appartment Title</a></h3>
+                    <h3><a href="details-property.html">Appartment Title</a></h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>                      
                   </div>
                   <div class="aa-properties-detial">
                     <span class="aa-price">
                       $15000
                     </span>
-                    <a href="details-asset.html" class="aa-secondary-btn">Xem Chi Tiết</a>
+                    <a href="details-property.html" class="aa-secondary-btn">Xem Chi Tiết</a>
                   </div>
                 </div>
               </article>
