--- a/details-property-rented.html
+++ b/details-property-rented.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <title>Kênh rao tin | Cyber Place</title>
+    <title>Tên BĐS | Bất động sản thông minh</title>
     
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -39,8 +39,7 @@
     <![endif]-->
 
   </head>
-
-  <body class="aa-price-range">   
+  <body class="aa-price-range">  
   <!-- Pre Loader -->
   <div id="aa-preloader-area">
     <div class="pulse"></div>
@@ -48,7 +47,6 @@
   <!-- SCROLL TOP BUTTON -->
     <a class="scrollToTop" href="#"><i class="fa fa-angle-double-up"></i></a>
   <!-- END SCROLL TOP BUTTON -->
-
 
   <!-- Start header section -->
   <header id="aa-header">  
@@ -70,8 +68,8 @@
               </div>
               <div class="col-md-6 col-sm-6 col-xs-6">
                 <div class="aa-header-right">
-                  <a href="sign-up.html" class="aa-register">Đăng ký</a>
-                  <a href="log-in.html" class="aa-login">Đăng nhập</a>
+                  <a href="#" class="aa-register">Xin chào ABCD!</a>				  
+                  <a href="#" class="aa-login">Đăng Xuất</a>
                 </div>
               </div>
             </div>
@@ -81,6 +79,7 @@
     </div>
   </header>
   <!-- End header section -->
+
   <!-- Start menu section -->
   <section id="aa-menu-area">
     <nav class="navbar navbar-default main-navbar" role="navigation">  
@@ -97,83 +96,70 @@
           <!-- Text based logo -->
            <a class="navbar-brand aa-logo" href="index.html"> Cyber <span>Place</span></a>
            <!-- Image based logo -->
-           <!-- <a class="navbar-brand aa-logo-img" href="index.html"><img src="img/logo.png" alt="logo"></a> -->
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="top-menu" class="nav navbar-nav navbar-right aa-main-nav">
             <li class="active"><a href="index.html">Trang Chủ</a></li>
-             <li class="dropdown">
-<!--              <a href="bds-cho-thue.html" class="dropdown-toggle" data-toggle="dropdown">Bất động sản cho thuê <span class="caret"></span></a>-->
-			  <a href="for-rent.html" class="dropdown-toggle">Bất động sản cho thuê <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">                
-                <li><a href="apartment-for-rent.html">Chung cư cho thuê</a></li>                
-                <li><a href="apartment-for-rent.html">Nhà riêng cho thuê</a></li>                
-                <li><a href="apartment-for-rent.html">Văn phòng cho thuê</a></li>                                           
-              </ul>
-            </li>
-            <li><a href="gallery.html">GALLERY</a></li>                                         
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="blog-archive.html">BLOG <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">                
-                <li><a href="blog-archive.html">BLOG</a></li>
-                <li><a href="blog-single.html">BLOG DETAILS</a></li>                                            
-              </ul>
-            </li>
-            <li><a href="contact.html">CONTACT</a></li>
-           <li><a href="post-news.html"><button style="line-height: 30px; margin-top: -10px; width: 150px; margin-right: -15px;" type="button" class="btn btn-info ">Đăng tin</button></a></li>
-           <li><a href="index-renter.html"><button style="line-height: 30px; margin-top: -10px; width: 150px; margin-right: -15px;" type="button" class="btn btn-info ">Quản lý nhà thuê</button></a></li>
-			</ul>                            
+			<li>
+  				  <a class="notification" href="notifications.html"><span>Thông Báo <span class="glyphicon">&#xe123;</span></span><span class="badge">99</span> </a></li>
+          </ul>
         </div><!--/.nav-collapse -->       
       </div>          
     </nav> 
   </section>
   <!-- End menu section -->
-
+	  
   <!-- Start Proerty header  -->
 
   <section id="aa-property-header">
     <div class="container">
-      <div class="row">
+      <div class="row	">
         <div class="col-md-12">
           <div class="aa-property-header-inner">
-            <h2>ĐĂNG TIN CHO THUÊ NHÀ ĐẤT</h2>
-            <ol class="breadcrumb">
-            <li><a href="#">Trang Chủ</a></li>            
-            <li class="active">Chung Cư Cho Thuê</li>
-          </ol>
+			  <h2>TÊN BĐS</h2>
           </div>
         </div>
       </div>
     </div>
   </section> 
-  <!-- End Proerty header  -->
-	
-  <!-- Start Properties  -->
+  <!-- End Proerty header  -->  
+	  
+ <!-- Start Properties  -->
   <section id="aa-properties">
     <div class="container">
       <div class="row">
         <div class="col-md-8">
-          <div class="aa-properties-content">
-            <!-- start properties content head -->
-            <div class="aa-properties-content-head">              
-              <div class="aa-properties-content-head-left">
-                <form action="" class="aa-sort-form">
-                  <label for="">Sắp xếp</label>
-                  <select name="">
-                    <option value="1" selected="Default">Mặc định</option>
-                    <option value="2">Tên</option>
-                    <option value="3">Giá</option>
-                    <option value="4">Ngày đăng</option>
-                  </select>
-                </form>
-              </div>
-              <div class="aa-properties-content-head-right">
-                <a id="aa-grid-properties" href="#"><span class="fa fa-th"></span></a>
-                <a id="aa-list-properties" href="#"><span class="fa fa-list"></span></a>
-              </div>            
-            </div>
-
-
+          <div class="aa-properties-content">            
+            <!-- Start properties content body -->
+            <div class="aa-properties-details">
+             <div class="aa-properties-details-img">
+               <img src="img/slider/1.jpg" alt="img">
+               <img src="img/slider/2.jpg" alt="img">
+               <img src="img/slider/3.jpg" alt="img">
+             </div>
+             <div class="aa-properties-info">
+               <h2>Tên BĐS</h2>
+			   <div class="col-md-12"></div>
+				 <table>
+					 <tr>
+						 <th style="vertical-align: top">Địa chỉ: &nbsp;</th>
+						 <td style="vertical-align: top">Số 29, phố Khương Hạ, phường Khương Đình, quận Thanh Xuân, thành phố Hà Nội.</td>
+					 </tr>
+					 <tr>
+						 <th style="vertical-align: top">Thời hạn hợp đồng: &nbsp;</th>
+						 <td style="vertical-align: top">6 tháng (01/01/2020 - 01/06/2020).</td>
+					 </tr>
+					 <tr>
+						 <th style="vertical-align: top">Hạn thanh toán kế tiếp: &nbsp;</th>
+						 <td style="vertical-align: top">15/03/2020 <b>(còn 20 ngày nữa tới hạn)</b>.</td>
+					 </tr>
+					 <tr>
+						 <th style="vertical-align: top">Số tiền thanh toán kế tiếp: &nbsp;</th>
+						 <td style="vertical-align: top">3.000.000đ (Nếu chưa đến hạn thì không hiển thị Số tiền thanh toán kế tiếp)</td>
+					 </tr>
+				 </table>
+             </div>
+            </div>           
           </div>
         </div>
         <!-- Start properties sidebar -->
@@ -181,21 +167,52 @@
           <aside class="aa-properties-sidebar">
             <!-- Start Single properties sidebar -->
             <div class="aa-properties-single-sidebar">
-              <h3 class="text-center">Hướng dẫn đăng tin</h3>
-              <p><strong>1. Thông tin có dấu (*) là bắt buộc.</strong></p>
-              <p><strong>2. Không gộp nhiều bất động sản trong 1 bài. </strong></p>
-              <p><strong>3. Không đăng lại tin cũ.</strong></p>
-              <p><strong>4. Để quá trình duyệt nhanh hơn vui lòng: </strong></p>
-              <p><strong><em> &emsp;gõ tiếng Việt có dấu và không viết tắt. </em></strong></p>
+              <div class="aa-single-advance-search">
+                  <input type="submit" value="Báo Cáo Hỏng hóc" class="aa-search-btn">
+                </div>
+				<div class="aa-single-advance-search">
+                  <input type="submit" value="Thanh toán" class="aa-search-btn">
+                </div>
+				<div class="aa-single-advance-search">
+                  <input type="submit" value="Dịch vụ" class="aa-search-btn">
+                </div>
+				<div class="aa-single-advance-search">
+                  <input type="submit" value="Chấm dứt hợp đồng" class="aa-search-btn">
+                </div>
             </div> 
+            <!-- Start Single properties sidebar -->
+            <div class="aa-properties-single-sidebar">
+              <h3>Các căn đang thuê</h3>
+              <div class="media">
+                <div class="media-left">
+                  <a href="#">
+                    <img class="media-object" src="img/item/1.jpg" alt="img">
+                  </a>
+                </div>
+                <div class="media-body">
+                  <h4 class="media-heading"><a href="#">Căn khác số 1</a></h4>
+                  <p>Còn 25 ngày đến hạn thanh toán!</p>                
+                </div>              
+              </div>
+              <div class="media">
+                <div class="media-left">
+                  <a href="#">
+                    <img class="media-object" src="img/item/1.jpg" alt="img">
+                  </a>
+                </div>
+                <div class="media-body">
+                  <h4 class="media-heading"><a href="#">Căn khác số 2</a></h4>
+                  <p style=" color: red">Còn 5 ngày đến hạn thanh toán!</p> 
+				  <p><a style="background: #FF0004" class="aa-secondary-btn" href="#">Thanh toán ngay!</a></p>
+                </div>              
+              </div>
+            </div>
           </aside>
         </div>
       </div>
     </div>
   </section>
   <!-- / Properties  -->
-	  
-	  
   <!-- Footer -->
   <footer id="aa-footer">
     <div class="container">
@@ -205,7 +222,7 @@
           <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12">
               <div class="aa-footer-left">
-                <p>Cyber <a rel="nofollow" href="index.html">Team</a></p>
+               <p>Cyber <a rel="nofollow" href="http://www.markups.io/">Team</a></p>
               </div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
@@ -233,9 +250,6 @@
   </footer>
   <!-- / Footer -->
 
- 
-  
-
   <!-- jQuery library -->
   <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
   <script src="js/jquery.min.js"></script>   
@@ -251,7 +265,6 @@
   <script type="text/javascript" src="js/jquery.fancybox.pack.js"></script>
   <!-- Custom js -->
   <script src="js/custom.js"></script> 
-	  
-	</body>
-  <!-- End header section -->
+
+  </body>
 </html>
